--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- header -->
     <div class="shadow top-0 bg-[rgba(0,0,0,0.1)] header sticky z-50">
       <div class="max-w-7xl mx-auto px-3 flex justify-between py-4">
-        <a href="#index2"><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
+        <a href="./index.html"><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
         <!-- <button
           class="bg-gradient-to-r to-[#F5F5F5] via-[#E96BF5] from-[#0D11B4] px-8 py-1 rounded-full font-lato font-extrabold">
           Sign in
@@ -118,7 +118,7 @@
         </div>
       </div>
     </section>
-    <section class="py-12">
+    <section class="py-12" >
       <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-3">
           <div class="col-span-12 md:col-span-6 h-full flex flex-col justify-center wow fadeInLeft" data-wow-duration="2.5s">
             <p class="capitalize font-normal text-2xl md:text-4xl lg:text-5xl xl:text-6xl md:pr-12 lg:pr-16 text-primarywow fadeInLeft" data-wow-duration="2.5s">your@crypto tag</p>
@@ -249,7 +249,7 @@
     <footer>
       <div class="py-10 font-lato text-white n1f">
         <div class="max-w-7xl mx-auto px-3 grid grid-cols-12">
-          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s" id="index2">
+          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s">
             <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft" data-wow-duration="2.5s">C-PAY</p>
             <div class="flex flex-col justify-center md:h-full">
               <p class="text-sm text-grey pr-3 wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions provider that seamlessly connects fiat and
