--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       },
     };
   </script>
-  <title>Document</title>
+  <title>C-Pay</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     <!-- header -->
     <div class="shadow top-0 bg-[rgba(0,0,0,0.1)] header sticky z-50">
       <div class="max-w-7xl mx-auto px-3 flex justify-between py-4">
-        <a href="./index.html"><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
+        <a href="#index2"><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
         <!-- <button
           class="bg-gradient-to-r to-[#F5F5F5] via-[#E96BF5] from-[#0D11B4] px-8 py-1 rounded-full font-lato font-extrabold">
           Sign in
@@ -60,7 +60,7 @@
         <img src="./assets/logo.png" class="w-full md:w-7/12 lg:w-4/12 wow fadeInLeft" data-wow-duration="2.5s" alt="hero">
       </div> -->
       <div class="w-full flex justify-center items-start wow fadeInRight" data-wow-duration="2.5s">
-        <div class="card px-1 md:px-12 mx-3 my-20 py-4 md:py-20 lg:py-52 rounded-3xl w-11/12 md:w-7/12 flex flex-col lg:flex-row justify-between items-center">
+        <div class="card px-1 md:px-12 mx-3 my-20 py-32 md:py-20 lg:py-52 rounded-3xl w-11/12 md:w-7/12 flex flex-col lg:flex-row justify-between items-center">
           <!-- <div class="pt-16 pb-16 font-semibold text-2xl text-primary lg:w-8/12">
             <div class="dynamic-text  wow fadeInRight" data-wow-duration="2.5s">
               <li class="flex gap-1 capitalize">Simplifying payments <span class="hidden xl:block">through Web 3.0</span></li>
@@ -118,7 +118,7 @@
         </div>
       </div>
     </section>
-    <section class="py-12" >
+    <section class="py-12">
       <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-3">
           <div class="col-span-12 md:col-span-6 h-full flex flex-col justify-center wow fadeInLeft" data-wow-duration="2.5s">
             <p class="capitalize font-normal text-2xl md:text-4xl lg:text-5xl xl:text-6xl md:pr-12 lg:pr-16 text-primarywow fadeInLeft" data-wow-duration="2.5s">your@crypto tag</p>
@@ -249,7 +249,7 @@
     <footer>
       <div class="py-10 font-lato text-white n1f">
         <div class="max-w-7xl mx-auto px-3 grid grid-cols-12">
-          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s">
+          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s" id="index2">
             <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft" data-wow-duration="2.5s">C-PAY</p>
             <div class="flex flex-col justify-center md:h-full">
               <p class="text-sm text-grey pr-3 wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions provider that seamlessly connects fiat and
