--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- header -->
     <div class="shadow top-0 bg-[rgba(0,0,0,0.1)] header sticky z-50">
       <div class="max-w-7xl mx-auto px-3 flex justify-between py-4">
-        <a href="#index2"><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
+        <a href="./index.html" ><img src="./assets/logo.png" class="w-24" alt="logo"/></a>
         <!-- <button
           class="bg-gradient-to-r to-[#F5F5F5] via-[#E96BF5] from-[#0D11B4] px-8 py-1 rounded-full font-lato font-extrabold">
           Sign in
@@ -74,12 +74,12 @@
             </a>
           </h1>
           <div class=" wow fadeInRight" data-wow-duration="2.5s">
-            <button class="btn btn1">
+            <a class="btn btn1" href="./prebook.html">
               <span class="title">Verify</span>
               <span class="icon">
                 <img src="./assets/verify.svg" alt="" />
               </span>
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -87,8 +87,8 @@
     <!-- hero section -->
     <section class="pt-60 pb-28 md:pb-48 animate-bg">
       <div class="max-w-7xl mx-auto px-6 -my-52 wow fadeInLeft"  data-wow-duration="2.5s">
-        <p class="capitalize font-normal text-2xl text-[#FFFFFF] md:text-4xl lg:text-5xl xl:text-6xl text-primary md:w-30/40">Setting New Benchmarks & Standards in Web3 Payments.</p>
-        <p class="text-secondary text-[#FFFFFF] font-light py-2 text-md md:text-lg md:w-30/40">We believe in Novelty, hence we pioneered newer techniques driven by innovation through our system and consequently proposed a methodology which would be an excellent performer over all courses of crypto payments.</p>
+        <p class="capitalize font-normal text-2xl !text-[#FFFFFF] md:text-4xl lg:text-5xl xl:text-6xl text-primary md:w-30/40"> Setting New Benchmarks & Standards in Web3 Payments.</p>
+        <p class="text-secondary !text-[#F5F5F5] font-light py-2 text-md md:text-lg md:w-30/40">We believe in Novelty, hence we pioneered newer techniques driven by innovation through our system and consequently proposed a methodology which would be an excellent performer over all courses of crypto payments.</p>
       </div>
     </section>
     <section class="py-12 n1a">
@@ -126,8 +126,9 @@
           </div>
           <div class="col-span-12 md:col-span-6">
             <div class="">
-              <video autoplay loop height="200">
-                <source src="./assets/video/Search_Box.m4v">
+              <video height="200"  autoplay loop>
+                <source src="./assets/video/Search_Box.m4v" type="video/mp4">
+                <source src="./assets/video/Search_Box.m4v" type="video/ogg">
               </video>
             </div>
           </div>
@@ -137,12 +138,12 @@
       <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-4 wow fadeInLeft"  data-wow-duration="2.5s">
         <div class="col-span-12 md:col-span-4 flex justify-center items-center">
           <div class="">
-            <button class="btn btn1">
+            <a class="btn btn1" href="./prebook.html">
               <span class="title">Verify</span>
               <span class="icon">
                 <img src="./assets/verify.svg" alt="" />
               </span>
-            </button>
+            </a>
           </div>
         </div>
         <div class="col-span-12 md:col-span-8 flex flex-col gap-4">
@@ -155,7 +156,8 @@
       <div class="max-w-7xl mx-auto grid grid-cols-12 font-libre relative">
         <div class="absolute w-full bottom-0 right-0 -z-10 hidden md:flex justify-end items-end">
           <video class="h-[300px] lg:h-[250px] w-[500px] lg:w-[800px]"autoplay loop>
-            <source src="./assets/video/video.mp4">
+            <source src="./assets/video/video.mp4" type="video/mp4">
+            <source src="./assets/video/video.mp4" type="video/ogg">
           </video>
         </div>
         <div class="col-span-12 md:col-span-4 h-full">
@@ -163,7 +165,8 @@
         </div>
         <div class="col-span-12 md:hidden">
           <video class="w-full" autoplay loop>
-            <source src="./assets/video/video.mp4">
+            <source src="./assets/video/video.mp4" type="video/mp4">
+            <source src="./assets/video/video.mp4" type="video/ogg">
           </video>
         </div>
         <div class="col-span-12 md:col-span-8 px-3">
