--- a/prebook.html
+++ b/prebook.html
@@ -37,7 +37,7 @@
             },
         };
     </script>
-    <title>C-Pay</title>
+    <title>Pre-Book</title>
 </head>
 
 <body>
@@ -72,12 +72,12 @@
                         <div class="flex flex-wrap gap-3 md:gap-10 items-center justify-between overflow-hidden">
                             <label for="tag" class="font-semibold w-full md:contents">Tag :</label>
                             <div class="p-1 rounded-full bg-gradient-to-b from-[#0D11B4] to-[#FDE8FF]">
-                                <input id="tag" name="tag" type="text"
+                                <input id="tag" name="tag" type="text" placeholder="@crypto" 
                                     class="rounded-3xl n1g px-4 py-2 w-full md:w-96">
                             </div>
                         </div>
                         <div class="w-full md:w-96 flex gap-3 justify-end items-start">
-                            <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="">
+                            <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="checking">
                             <label for="" class="text-sm">By checking this I wish to proceed by accepting the terms and
                                 condition by c-pay.xyz</label>
                         </div>
