--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           <div class="col-span-12 md:col-span-6">
             <div class="">
-              <video height="200"  autoplay loop>
+              <video height="200"  autoplay muted loop >
                 <source src="./assets/video/Search_Box.m4v" type="video/mp4">
                 <source src="./assets/video/Search_Box.m4v" type="video/ogg">
               </video>
@@ -155,7 +155,7 @@
     <section class="py-28 wow fadeInRight" data-wow-duration="2.5s">
       <div class="max-w-7xl mx-auto grid grid-cols-12 font-libre relative">
         <div class="absolute w-full bottom-0 right-0 -z-10 hidden md:flex justify-end items-end">
-          <video class="h-[300px] lg:h-[250px] w-[500px] lg:w-[800px]"autoplay loop>
+          <video class="h-[300px] lg:h-[250px] w-[500px] lg:w-[800px]"autoplay muted loop>
             <source src="./assets/video/video.mp4" type="video/mp4">
             <source src="./assets/video/video.mp4" type="video/ogg">
           </video>
@@ -164,7 +164,7 @@
           <img src="./assets/tag.svg" class="w-12/12" alt="tag">
         </div>
         <div class="col-span-12 md:hidden">
-          <video class="w-full" autoplay loop>
+          <video class="w-full" autoplay muted loop>
             <source src="./assets/video/video.mp4" type="video/mp4">
             <source src="./assets/video/video.mp4" type="video/ogg">
           </video>
