--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+  <link rel="icon" type="image/x-icon" href="./assets/logo.svg">
   <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -68,12 +68,12 @@
             </div>
           </div> -->
           <h1>
-            <a href="" class="typewrite text-5xl capitalize font-bold font-lato" data-period="2000"
+            <a href="" class="typewrite text-5xl capitalize font-bold font-lato text-center" data-period="2000"
               data-type='[ "Simplifying payments", "Reducing Complexities" ]'>
               <span class="wrap"></span>
             </a>
           </h1>
-          <div class=" wow fadeInRight" data-wow-duration="2.5s">
+          <div class="my-8 md:my-0 wow fadeInRight" data-wow-duration="2.5s">
             <a class="btn btn1" href="./prebook.html">
               <span class="title">Verify</span>
               <span class="icon">
