--- a/prebook.html
+++ b/prebook.html
@@ -76,7 +76,7 @@
               </div>
             </div>
             <div class="col-span-2 w-full md:w-96 flex gap-3 justify-end items-start">
-              <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="">
+              <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="checking">
               <label for="" class="text-sm">By checking this I wish to proceed by accepting the terms and
                 condition by c-pay.xyz</label>
             </div>
