--- a/index.html
+++ b/index.html
@@ -329,6 +329,15 @@
     new WOW().init();
   </script>
   <script src="js/index.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KENYF3V9BJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KENYF3V9BJ');
+</script>
 </body>
 
 </html>
