--- a/prebook.html
+++ b/prebook.html
@@ -72,7 +72,7 @@
             <div class="col-span-2 flex flex-wrap gap-3 md:gap-10 items-center justify-between overflow-hidden">
               <label for="email" class="font-semibold w-full md:contents">Tag :</label>
               <div class="p-1 rounded-full bg-gradient-to-b from-[#0D11B4] to-[#FDE8FF]">
-                <input id="tag" name="tag" type="text" class="rounded-3xl n1g px-4 py-2 w-full md:w-96">
+                <input id="tag" name="tag" type="text" class="rounded-3xl n1g px-4 py-2 w-full md:w-96" placeholder="@crypto">
               </div>
             </div>
             <div class="col-span-2 w-full md:w-96 flex gap-3 justify-end items-start">
