--- a/prebook.html
+++ b/prebook.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="./assets/logo.svg">
+
   <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -37,7 +37,7 @@
       },
     };
   </script>
-  <title>Pre-Book</title>
+  <title>Document</title>
 </head>
 
 <body>
@@ -77,8 +77,8 @@
             </div>
             <div class="col-span-2 w-full md:w-96 flex gap-3 justify-end items-start">
               <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="checking">
-              <label for="checking" class="text-sm">By checking this I wish to proceed by accepting the terms and
-                condition by c-pay.xyz</label>
+              <label for="checking" class="text-sm">By checking this I wish to proceed by accepting the <a class="tnc" href="./prebook.html">terms and
+                condition</a> by c-pay.xyz</label>
             </div>
             <div class="col-span-2 w-full inline-flex justify-center">
               <button class="btn btn1 py-4 px-8" onclick="verifyFunc()">
