--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <!-- <div class="max-w-7xl mx-auto px-3 flex justify-center items-start h-[60vh] md:h-[70vh] max-h-[600px]">
         <img src="./assets/logo.png" class="w-full md:w-7/12 lg:w-4/12 wow fadeInLeft" data-wow-duration="2.5s" alt="hero">
       </div> -->
-      <div class="w-full flex justify-center items-start wow fadeInRight" data-wow-duration="2.5s">
+      <div class="w-full flex justify-center items-start wow fadeInLeft" data-wow-duration="2.5s">
         <div class="card px-1 md:px-12 mx-3 my-20 py-32 md:py-20 lg:py-52 rounded-3xl w-11/12 md:w-7/12 flex flex-col lg:flex-row justify-between items-center">
           <!-- <div class="pt-16 pb-16 font-semibold text-2xl text-primary lg:w-8/12">
-            <div class="dynamic-text  wow fadeInRight" data-wow-duration="2.5s">
+            <div class="dynamic-text  wow fadeInLeft" data-wow-duration="2.5s">
               <li class="flex gap-1 capitalize">Simplifying payments <span class="hidden xl:block">through Web 3.0</span></li>
               <li class="flex gap-1 capitalize">Reducing Complexities <span class="hidden xl:block"> in Transactions</span></li>
             </div>
@@ -73,7 +73,7 @@
               <span class="wrap"></span>
             </a>
           </h1>
-          <div class="my-8 md:my-0 wow fadeInRight" data-wow-duration="2.5s">
+          <div class="my-8 md:my-0 wow fadeInLeft" data-wow-duration="2.5s">
             <a class="btn btn1" href="./prebook.html">
               <span class="title">Verify</span>
               <span class="icon">
@@ -152,7 +152,7 @@
         </div>
       </div>
     </section>
-    <section class="py-28 wow fadeInRight" data-wow-duration="2.5s">
+    <section class="py-28 wow fadeInLeft" data-wow-duration="2.5s">
       <div class="max-w-7xl mx-auto grid grid-cols-12 font-libre relative">
         <div class="absolute w-full bottom-0 right-0 -z-10 hidden md:flex justify-end items-end">
           <video class="h-[300px] lg:h-[250px] w-[500px] lg:w-[800px]"autoplay muted loop>
@@ -214,7 +214,7 @@
       </div>
     </section>
     <section class="py-12 md:py-24 n1d" data-wow-duration="2.5s">
-      <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-3  wow fadeInRight">
+      <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-3  wow fadeInLeft">
         <div class="col-span-12 md:col-span-9 md:px-5 order-2 md:order-1 h-auto grid place-content-center">
           <p class="capitalize font-normal text-2xl md:text-4xl lg:text-5xl xl:text-6xl md:pr-12 lg:pr-16 text-primary w-10/12">Verify Your sender & Know your Receiver</p>
           <p class="text-secondary font-light py-2 text-md md:text-lg">With a zero trust environment we secure accountability of every entity including us, hence consequently Verification is not complimentary.</p>
@@ -290,19 +290,19 @@
             <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-2 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/mail.svg" alt="" srcset="">
-                <p>Mail</p>
+                <a href="mailto:pr@c-pay.xyz">Mail</a>
               </li>
               <li class="flex gap-3 items-center"><img src="./assets/icon/twitter.svg" alt="" srcset="">
-                <p>Twitter</p>
+                <a href="https://twitter.com/C_Payfinance">Twitter</a>
               </li>
-              <li class="flex gap-3 items-center"><img src="./assets/icon/instagram.svg" alt="" srcset="">
+              <!-- <li class="flex gap-3 items-center"><img src="./assets/icon/instagram.svg" alt="" srcset="">
                 <p>Instagram</p>
               </li>
               <li class="flex gap-3 items-center"><img src="./assets/icon/youtube.svg" alt="" srcset="">
                 <p>Youtube</p>
-              </li>
+              </li> -->
               <li class="flex gap-3 items-center"><img src="./assets/icon/linkedin.svg" alt="" srcset="">
-                <p>Linkedin</p>
+                <a href="https://www.linkedin.com/company/c-payfinance/?viewAsMember=true">Linkedin</a>
               </li>
             </ul>
           </section>
@@ -315,8 +315,8 @@
             <p class="text-center md:text-left">Copyright C-Pay © 2022. All rights reserved.</p>
           </div>
           <div class="col-span-2 md:col-span-1 flex justify-center md:justify-end gap-5 text-xs wow fadeInLeft"  data-wow-duration="2.5s">
-            <button>Terms of Use</button>
-            <button>Privacy Policy</button>
+            <a class="tncfoot" href="./termsofuse.html">Terms of Use</a>
+            <a class="tncfoot" href="./privacypolicy.html">Privacy Policy</a>
             <button>© 2022 C-Pay</button>
           </div>
         </div>
@@ -329,15 +329,6 @@
     new WOW().init();
   </script>
   <script src="js/index.js"></script>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KENYF3V9BJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-KENYF3V9BJ');
-</script>
 </body>
 
 </html>
