--- a/prebook.html
+++ b/prebook.html
@@ -77,7 +77,7 @@
             </div>
             <div class="col-span-2 w-full md:w-96 flex gap-3 justify-end items-start">
               <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="checking">
-              <label for="checking" class="text-sm">By checking this I wish to proceed by accepting the <a class="tnc" href="./prebook.html">terms and
+              <label for="checking" class="text-sm">By checking this I wish to proceed by accepting the <a class="tnc" href="./tnc.html">terms and
                 condition</a> by c-pay.xyz</label>
             </div>
             <div class="col-span-2 w-full inline-flex justify-center">
@@ -140,19 +140,19 @@
             <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-2 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/mail.svg" alt="" srcset="">
-                <p>Mail</p>
+                <a href="mailto:pr@c-pay.xyz">Mail</a>
               </li>
               <li class="flex gap-3 items-center"><img src="./assets/icon/twitter.svg" alt="" srcset="">
-                <p>Twitter</p>
+                <a href="https://twitter.com/C_Payfinance">Twitter</a>
               </li>
-              <li class="flex gap-3 items-center"><img src="./assets/icon/instagram.svg" alt="" srcset="">
+              <!-- <li class="flex gap-3 items-center"><img src="./assets/icon/instagram.svg" alt="" srcset="">
                 <p>Instagram</p>
               </li>
               <li class="flex gap-3 items-center"><img src="./assets/icon/youtube.svg" alt="" srcset="">
                 <p>Youtube</p>
-              </li>
+              </li> -->
               <li class="flex gap-3 items-center"><img src="./assets/icon/linkedin.svg" alt="" srcset="">
-                <p>Linkedin</p>
+                <a href="https://www.linkedin.com/company/c-payfinance/?viewAsMember=true">Linkedin</a>
               </li>
             </ul>
           </section>
@@ -166,8 +166,8 @@
           </div>
           <div class="col-span-2 md:col-span-1 flex justify-center md:justify-end gap-5 text-xs wow fadeInLeft"
             data-wow-duration="2.5s">
-            <button>Terms of Use</button>
-            <button>Privacy Policy</button>
+            <a class="tncfoot" href="./termsofuse.html">Terms of Use</a>
+            <a class="tncfoot" href="./privacypolicy.html">Privacy Policy</a>
             <button>© 2022 C-Pay</button>
           </div>
         </div>
