--- a/tnc.html
+++ b/tnc.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/x-icon" href="./assets/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms&conditions</title>
+    <title>Terms & Conditions</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;200;300;400;500;600;700&display=swap");
