--- a/tnc.html
+++ b/tnc.html
@@ -292,6 +292,23 @@
         to you directly.
       </p>
 
+      
+      <h2><strong>Special Notice</strong></h2>
+
+      <p>
+        C-pay.xyz or any other entity name referring to the website 
+        "www.c-pay.xyz"/c-pay organisation/c-pay team/any member/employees/devloper
+        related to c-pay is not liable in any case of loss/change of tag
+        or any other product/service and c-pay or any of the above reffered 
+        entity is not legally bound to provide same/provide all said 
+        services/merchandise/products listed on website or anywhere else
+        when referred in context of c-pay/c-pay team/c-pay members/services/products.
+        C-pay/www.c-pay.xyz and all it's members posses all rights to 
+        change/omit/remove/revert any delivered/non-delivered 
+        product/service/merchandise/tags/account/data in order to avoid
+        any infringement or this act can be preformed willingly. 
+      </p>
+      
       <p>
         We do not ensure that the information on this website is correct, we do
         not warrant its completeness or accuracy; nor do we promise to ensure
