--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
           </div> -->
           <h1>
-            <a href="" class="typewrite text-5xl capitalize font-bold font-lato text-center" data-period="2000"
-              data-type='[ "Simplifying payments", "Reducing Complexities" ]'>
+            <a href="" class="typewrite text-6xl capitalize font-bold font-libre text-center" data-period="200"
+              data-type='[ "Simplifying payments", "Reducing Complexities", "Revolutionizing Payments" ]'>
               <span class="wrap"></span>
             </a>
           </h1>
