--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
           </div> -->
           <h1>
-            <a href="" class="typewrite text-5xl capitalize font-regular font-libre text-center" data-period="1000"
-              data-type='[ "Simplifying Payments", "Reducing Complexities", "Revolutionizing Payments" ]'>
+            <a href="" class="typewrite text-6xl capitalize font-regular font-libre text-center" data-period="1000"
+              data-type='[ "Revolutionizing Payments", "Reducing Complexities", "Simplifying payments" ]'>
               <span class="wrap"></span>
             </a>
           </h1>
