--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
           </div> -->
           <h1>
-            <a href="" class="typewrite text-6xl capitalize font-regular font-libre text-center" data-period="1000"
-              data-type='[ "Revolutionizing Payments", "Reducing Complexities", "Simplifying payments" ]'>
+            <a href="" class="typewrite text-6xl font-extrabold font-libre text-white text-center " data-period="1000"
+              data-type='[ "Revolutionizing Payments", "Reducing Complexities", "Simplifying Payments" ]'>
               <span class="wrap"></span>
             </a>
           </h1>
