--- a/prebook.html
+++ b/prebook.html
@@ -77,7 +77,7 @@
             </div>
             <div class="col-span-2 w-full md:w-96 flex gap-3 justify-end items-start">
               <input type="checkbox" class="border-2 border-[#2898FF] mt-1 p-3" name="" id="checking">
-              <label for="checking" class="text-sm">By checking this I wish to proceed by accepting the <a class="tnc" href="./tnc.html">terms and
+              <label for="checking" class="text-sm">By clicking this I wish to proceed by accepting the <a class="tnc" href="./tnc.html">terms and
                 condition</a> by c-pay.xyz</label>
             </div>
             <div class="col-span-2 w-full inline-flex justify-center">
