--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           </section>
           <!-- social -->
           <section class="col-span-3 font-light text-xs tracking-[0.25em] flex flex-col my-4 wow fadeInLeft"  data-wow-duration="2.5s">
-            <p class="text-white font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
+            <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-2 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/mail.svg" alt="" srcset="">
                 <a href="mailto:pr@c-pay.xyz">Mail</a>
