--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s" id="index2">
             <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft" data-wow-duration="2.5s">C-PAY</p>
             <div class="flex flex-col justify-center md:h-full">
-              <p class="text-sm text-grey pr-3 wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions provider that seamlessly connects fiat and
+              <p class="text-sm text-grey pr-3 font-lite wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions provider that seamlessly connects fiat and
                 crypto economies for global consumers, merchants, developers, and institutions.
               </p>
             </div>
