--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div> -->
           <h1>
             <a href="" class="typewrite text-5xl font-regular font-libre text-white text-center " data-period="1000"
-              data-type='[ "Revolutionizing Payments", "Reducing Complexities", "Simplifying Payments" ]'>
+              data-type='[ "Revolutionizing Payments", "Reducing Complexities", "Demystifying Crypto Payments" ]'>
               <span class="wrap"></span>
             </a>
           </h1>
