--- a/prebook.html
+++ b/prebook.html
@@ -59,9 +59,8 @@
         <img src="./assets/prebook.svg" alt="prebook">
         <img src="./assets/prebook-card.svg" class="w-full md:w-10/12" alt="prebook-card">
         <div class="text-white text-xl md:text-lg flex flex-col items-center  wow fadeInLeft" data-wow-duration="2.5s">
-          <p>We believe in Novelty, hence we pioneered newer techniques driven by innovation through our
-            system and consequently proposed a methodology which would be an excellent performer over all
-            courses of crypto payments.</p>
+          <p>Pre-Book your desired crypto tags now to avoid the hassle in future of running out of your favourite tags.
+We maintain the security of your email & tag passed to us and make each and every tag customised to your preference.</p>
           <div class="py-10 grid grid-cols-2 md:flex flex-col gap-5 items-end">
             <div class="col-span-2 flex flex-wrap gap-3 md:gap-10 items-center justify-between overflow-hidden">
               <label for="email" class="font-semibold w-full md:contents">Email :</label>
