--- a/prebook.html
+++ b/prebook.html
@@ -59,7 +59,7 @@
         <img src="./assets/prebook.svg" alt="prebook">
         <img src="./assets/prebook-card.svg" class="w-full md:w-10/12" alt="prebook-card">
         <div class="text-white text-xl md:text-lg flex flex-col items-center  wow fadeInLeft" data-wow-duration="2.5s">
-          <p>Pre-Book your desired crypto tags now to avoid the hassle in future of running out of your favourite tags.
+          <p><b>Pre-Book your desired crypto tags now to avoid the hassle in future of running out of your favourite tags.</b>
 We maintain the security of your email & tag passed to us and make each and every tag customised to your preference.</p>
           <div class="py-10 grid grid-cols-2 md:flex flex-col gap-5 items-end">
             <div class="col-span-2 flex flex-wrap gap-3 md:gap-10 items-center justify-between overflow-hidden">
