--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <p class="text-white font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-5 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/home.svg" alt="" srcset="">
-                <a href="./index.html" >Home</p>
+                <p><a href="./index.html" >Home</a></p>
               </li>
             </ul>
           </section>
