--- a/prebook.html
+++ b/prebook.html
@@ -94,48 +94,37 @@ We maintain the security of your email & tag passed to us and make each and ever
     <!-- content end -->
     <!-- footer -->
     <footer>
-      <div class="py-10 font-lato text-white n1h">
+      <div class="py-10 font-lato text-white n1f">
         <div class="max-w-7xl mx-auto px-3 grid grid-cols-12">
-          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s">
-            <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft"
-              data-wow-duration="2.5s">C-PAY</p>
+          <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s" id="index2">
+            <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft" data-wow-duration="2.5s">C-PAY</p>
             <div class="flex flex-col justify-center md:h-full">
-              <p class="text-sm text-grey pr-3 wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions
-                provider that seamlessly connects fiat and
+              <p class="text-sm text-grey pr-3 font-lite wow fadeInLeft" data-wow-duration="2.5s">C-pay is a payment solutions provider that seamlessly connects fiat and
                 crypto economies for global consumers, merchants, developers, and institutions.
               </p>
             </div>
           </section>
           <!-- pages -->
-          <section
-            class="col-span-6 md:col-span-2 font-light text-xs tracking-[0.25em] flex flex-col my-4 wow fadeInLeft"
-            data-wow-duration="2.5s">
-            <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
+          <section class="col-span-6 md:col-span-2 font-light text-xs tracking-[0.25em] flex flex-col my-4 wow fadeInLeft"  data-wow-duration="2.5s">
+            <p class="text-white font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-5 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/home.svg" alt="" srcset="">
-                <p>Home</p>
-              </li>
-              <li class="flex gap-3 items-center"><img src="./assets/icon/about.svg" alt="" srcset="">
-                <p>About</p>
-              </li>
-              <li class="flex gap-3 items-center"><img src="./assets/icon/contact.svg" alt="" srcset="">
-                <p>Contact Us</p>
+                <p><a href="./index.html" >Home</a></p>
               </li>
             </ul>
           </section>
           <!-- solutions -->
           <section class="col-span-6 md:col-span-3 font-light text-xs tracking-[0.25em] flex flex-col my-4">
-            <div class="wow fadeInLeft" data-wow-duration="2.5s">
-              <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Solutions</p>
+            <div class="wow fadeInLeft"  data-wow-duration="2.5s">
+              <p class="text-white font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Solutions</p>
             </div>
-            <div class="flex flex-col justify-center md:h-full wow fadeInLeft" data-wow-duration="2.5s">
+            <div class="flex flex-col justify-center md:h-full wow fadeInLeft"  data-wow-duration="2.5s">
               <p class="">Crypto Payment Acceptance Fiat Payment Rails Crypto Ramps White Label Crypto-Linked Cards
               </p>
             </div>
           </section>
           <!-- social -->
-          <section class="col-span-3 font-light text-xs tracking-[0.25em] flex flex-col my-4 wow fadeInLeft"
-            data-wow-duration="2.5s">
+          <section class="col-span-3 font-light text-xs tracking-[0.25em] flex flex-col my-4 wow fadeInLeft"  data-wow-duration="2.5s">
             <p class="text-black font-bold md:font-normal mt-2 mb-5 md:mb-10 lg:mb-16">Pages</p>
             <ul class="flex flex-col justify-center md:h-full gap-2 ml-3 md:ml-5 lg:ml-10">
               <li class="flex gap-3 items-center"><img src="./assets/icon/mail.svg" alt="" srcset="">
@@ -163,8 +152,7 @@ We maintain the security of your email & tag passed to us and make each and ever
           <div class="col-span-2 md:col-span-1 text-xs md:text-sm">
             <p class="text-center md:text-left">Copyright C-Pay © 2022. All rights reserved.</p>
           </div>
-          <div class="col-span-2 md:col-span-1 flex justify-center md:justify-end gap-5 text-xs wow fadeInLeft"
-            data-wow-duration="2.5s">
+          <div class="col-span-2 md:col-span-1 flex justify-center md:justify-end gap-5 text-xs wow fadeInLeft"  data-wow-duration="2.5s">
             <a class="tncfoot" href="./termsofuse.html">Terms of Use</a>
             <a class="tncfoot" href="./privacypolicy.html">Privacy Policy</a>
             <button>© 2022 C-Pay</button>
@@ -174,11 +162,11 @@ We maintain the security of your email & tag passed to us and make each and ever
     </footer>
   </div>
   <!-- wow js initialize -->
-  <script src="./js/index.js"></script>
   <script src="js/wow.min.js"></script>
   <script>
     new WOW().init();
   </script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
