--- a/prebook.html
+++ b/prebook.html
@@ -179,6 +179,15 @@
   <script>
     new WOW().init();
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KENYF3V9BJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KENYF3V9BJ');
+</script>
 </body>
 
 </html>
