--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="max-w-7xl mx-auto px-3 grid grid-cols-12 gap-3">
           <div class="col-span-12 md:col-span-6 h-full flex flex-col justify-center wow fadeInLeft" data-wow-duration="2.5s">
             <p class="capitalize font-normal text-2xl md:text-4xl lg:text-5xl xl:text-6xl md:pr-12 lg:pr-16 text-primarywow fadeInLeft" data-wow-duration="2.5s">your@crypto tag</p>
-          <p class="text-secondary font-light py-2 text-md md:text-lg wow fadeInLeft" data-wow-duration="2.5s">Never seen before</p>
+          <p class="text-secondary font-light py-2 text-md md:text-lg wow fadeInLeft" data-wow-duration="2.5s"></p>
           </div>
           <div class="col-span-12 md:col-span-6">
             <div class="">
