--- a/prebook.html
+++ b/prebook.html
@@ -94,7 +94,7 @@
     <!-- content end -->
     <!-- footer -->
     <footer>
-      <div class="py-10 font-lato text-white n1f">
+      <div class="py-10 font-lato text-white n1h">
         <div class="max-w-7xl mx-auto px-3 grid grid-cols-12">
           <section class="col-span-12 md:col-span-4 flex flex-col px-3 my-4 wow fadeInLeft" data-wow-duration="2.5s" id="index2">
             <p class="text-white font-labre font-extrabold text-4xl md:text-5xl lg:text-6xl py-4wow fadeInLeft" data-wow-duration="2.5s">C-PAY</p>
