--- a/prebook.html
+++ b/prebook.html
@@ -60,7 +60,7 @@
         <img src="./assets/prebook-card.svg" class="w-full md:w-10/12" alt="prebook-card">
         <div class="text-white text-xl md:text-lg flex flex-col items-center  wow fadeInLeft" data-wow-duration="2.5s">
           <p><b>We recommend you to Register your desired tag</b> by simply entering associated email and your desired tag below, 
-            to avoid any chance of missing your favourite tag :</p>
+            to avoid any chance of missing your favourite tag : example - elon@crypto</p>
           <div class="py-10 grid grid-cols-2 md:flex flex-col gap-5 items-end">
             <div class="col-span-2 flex flex-wrap gap-3 md:gap-10 items-center justify-between overflow-hidden">
               <label for="email" class="font-semibold w-full md:contents">Email :</label>
