--- a/prebook.html
+++ b/prebook.html
@@ -14,6 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <!-- css link -->
   <link rel="stylesheet" href="css/style.css">
   <!-- animate.css link -->
@@ -36,6 +37,13 @@
         },
       },
     };
+     $(window).scroll(function () {
+      if ($(this).scrollTop() > 50) {
+        $('#dynamic').removeClass('animate-bg');
+      }else{
+        $('#dynamic').addClass('animate-bg');        
+      }
+    });
   </script>
   <title>Pre-Book</title>
 </head>
@@ -43,7 +51,7 @@
 <body>
   <div class="flex flex-col justify-between text-libre ">
     <!-- header -->
-    <div class="shadow top-0 bg-[rgba(189,189,189,0.11)] header sticky z-50 ">
+    <div id="dynamic" class="shadow top-0 bg-[rgba(0,0,0,0.1)] header sticky z-50 animate-bg">
       <div class="max-w-7xl mx-auto px-3 flex justify-between py-2 ">
         <a href="./index.html"><img src="./assets/logo.png" class="w-24" alt="logo" /></a>
         <!-- <button
